--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -10,3 +10,12 @@
   padding: 20px 30px;
   align-items: center;
 }
+.home__header a {
+  margin-right: 20px;
+  text-decoration: inherit;
+  color: rgba(0, 0, 0, 0.87);
+  font-size: 15px;
+}
+.home__header a:hover {
+  text-decoration: underline;
+}
