--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -19,3 +19,22 @@
 .home__header a:hover {
   text-decoration: underline;
 }
+.home__headerright {
+  display: flex;
+  align-items: center;
+  min-width: 13vw;
+  justify-content: space-between;
+}
+.home__headerright > .MuiSvgIcon-root {
+  margin-right: 20px;
+}
+.home__body {
+  flex: 1;
+  display: flex;
+  margin-top: 10%;
+  flex-direction: column;
+}
+.home__body > img {
+  object-fit: contain;
+  height: 100px;
+}
