--- a/src/SearchPage.css
+++ b/src/SearchPage.css
@@ -1,21 +1,46 @@
-.searchpage__header{
-    display: flex;
-    position: top;
-    top: 0;
-    background-color: white;
-    z-index: 100;
-    align-items: flex-start;
-    padding: 30px;
-    border-bottom: 1px solid lightgray;
+.searchpage__header {
+  display: flex;
+  position: top;
+  top: 0;
+  background-color: white;
+  z-index: 100;
+  align-items: flex-start;
+  padding: 30px;
+  border-bottom: 1px solid lightgray;
 }
 .searchPage_Logo {
   object-fit: contain;
   height: 50px;
   margin-right: 50px;
 }
-.searchPage__headerbody > .search > .search__input{
-    margin-top: 0;
-    width: unset;
-    margin: unset;
-    max-width: unset;
+.searchPage__headerbody > .search > .search__input {
+  margin-top: 0;
+  width: unset;
+  margin: unset;
+  max-width: unset;
+}
+.searchPage__options {
+  display: flex;
+  align-items: center;
+  color: grey;
+}
+.searchPage__optionsRight,
+.searchPage__optionsLeft {
+  display: flex;
+}
+.searchPage__options a,
+.searchPage__optionsRight a {
+  text-decoration: none;
+  color: gray;
+}
+.searchPage__optionsRight {
+  margin-left: 80px;
+}
+.searchPage_option {
+  display: flex;
+  align-items: center;
+  margin-right: 20px;
+}
+.searchPage_option a {
+  margin-left: 5px;
 }
