--- a/src/SearchPage.css
+++ b/src/SearchPage.css
@@ -44,3 +44,17 @@
 .searchPage_option a {
   margin-left: 5px;
 }
+.searchPage__result{
+  margin: 40px 0;
+}
+.searchPage__resultCount{
+  color: #70757a;
+  font-size: 14px;
+}
+.searchPage__results {
+  max-width: 650px;
+  margin-top: 20px;
+  margin-left: 240px;
+  margin-bottom: 100px;
+  
+}
